<resources>
    <string name="app_name">PROTOTYPE_JEFF</string>
    <string name="title_activity_notification_wizard">NotificationWizard</string>
    <string name="compose_email">Compose Email</string>
    <string-array name="dropdown_array">
        <item>Periodic</item>
        <item>Custom</item>
    </string-array>
    <string name="title_activity_notification_manager">NotificationManager</string>
    <string name="title_activity_welcome_page">WelcomePage</string>
    <string name="title_activity_information_selection">InformationSelection</string>
    <string name="popupactivity">Popup Activity</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_type_selection">TypeSelection</string>
    <string name="refund_limit">Refund Limit</string>
    <string name="enter_phone">Enter Your Phone Number</string>
    <string name="cell_number">Cell Number</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter Inventory amount</string>
    <string name="notifiTitle">NOTIFI</string>
    <string name="when_to_notify">When to Notify</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="enter_your_email">Enter Your Email</string>

=======
    <string name="welcome_to_notify">Welcome to Notify!</string>
    <string name="welcome_to_notifi">Welcome to Notifi</string>
    >>>>>>> Periodic_popup_error


</resources>
